tdf#142370 a null response callback should be acceptable

commit 7f032b2f16fad56beea1df826eb59c6f85c71268
Date:   Sat Apr 3 01:24:30 2021 -0500

    tdf#127533 Make Tip-of-the-Day dialog non-modal and allow multiple tips to open

calls StartExecuteAsync(nullptr) so there is no callback function for
the response which is a little unusual.

The generic backend protects against a null callback hidden behind
maEndCtx.isSet() before calling aEndCtx.maEndDialogFn() where isSet()
checks for a null maEndDialogFn() so do the same for the gtk backend.

Change-Id: Ib5346be37bfba035a00649ff7fb1d66532739721